# karajan

./: .gitignore  Cargo.toml  README.md  build.rs  index.c4
.github/workflows/: likec4.yaml
asbind/: Cargo.toml
asbind/src/: lib.rs
asbind_parse/: Cargo.toml
asbind_parse/src/: definitions.rs  gen_as.rs  gen_rust.rs  lib.rs  parse.rs
scheme/: tg.krj
src/: asc_loader.rs  lib.rs  main.rs  tg.rs  tg_api.rs
tst/: README.md  asconfig.json  docker_npm.nu  package-lock.json  package.json
tst/assembly/: index.ts
